tests/core/invalid/mutliple-files.cl/bobbie.cl
class Bob inherits Susie {
  test1() : Object {
      1+1
      ---

  };
};
